--- a/roles/sanoid/templates/sanoid.conf.j2
+++ b/roles/sanoid/templates/sanoid.conf.j2
@@ -1,6 +1,6 @@
 # {{ ansible_managed }}
 
-{{ sanoid__datasets | to_ini }}
+{{ sanoid__datasets | cadair.sanoid.to_ini }}
 
 {% for template, config in sanoid__templates.items() %}
 [template_{{ template}}]
